# tomlpipe

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: release-drafter-autolabel.yml  release-drafter.yml
.github/workflows/: auto_drafter.yml  br_main_pull_req.yml  br_main_push_release.yml  br_release.yml  release_single_binary.yml
src/: lib.rs  main.rs
